--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,7 @@
-asgiref
-Django
-djangorestframework
-python-decouple
-sqlparse
-typing_extensions
-gunicorn
-django-cors-headers
-
-
-
+asgiref==3.8.1
+Django==5.1.4
+django-cors-headers==4.6.0
+djangorestframework==3.15.2
+python-decouple==3.8
+sqlparse==0.5.2
+typing_extensions==4.12.2
